--- a/apps/templates/bookmodule/list_books.html
+++ b/apps/templates/bookmodule/list_books.html
@@ -1,38 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-<head>
-    <title>List of Books</title>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Books, recent, Learning, library">
-    <meta name="description" content="Books website">
-    <link rel="stylesheet" href="{% static 'bookmodule/styles.css' %}">
-</head>
-<body>
-    {% include "includes/header.html" %}
-    
-    <h1>List of Books</h1>
-    
-    <div>
-        <a href="{% url 'books.view_one_book' bookId=123 %}">
-            <h2>Internet & World Wide Web How to Program</h2>
-        </a>
-        <a href="{% url 'books.view_one_book' bookId=123 %}">
-            <img src="{% static 'bookmodule/book1.jpg' %}" alt="Book 1 Image" width="200" height="200">
-        </a>
-    </div>
-    <hr>
-    
-    <div>
-        <h2>C++ How to Program, Late Objects Version</h2>
-        <img src="{% static 'bookmodule/book2.jpg' %}" alt="Book 2 Image" width="200" height="200">
-    </div>
-    <hr>
-    
-    <div>
-        <h2>Images in Another Folder</h2>
-        <img src="{% static 'bookmodule/book3.jpg' %}" alt="Book 3 Image" width="200" height="200">
-    </div>
-    <hr>
-</body>
-</html>
+<h1>List of Books</h1>
+<ul>
+    {% for book in books %}
+        <p>
+            Title: {{ book.title }} | Author: {{ book.author }} | Price: {{ book.price }}
+            <a href="{% url 'edit_book1' book.id %}">Edit</a> | 
+            <a href="{% url 'delete_book' book.id %}">Delete</a>
+        </p>
+    {% endfor %}
+</ul>
+
+<a href="{% url 'add_book1' %}">Add New Book</a>
